--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
+body {
+  background: #ff3d00
+}
 .App {
   text-align: center;
+  color: white;
+  background: transparent;
+  background: linear-gradient(180deg, #ff3d00 0%, #00a0b2  50%, #ff3d00 100%);
 }
+
 
