--- a/src/App.css
+++ b/src/App.css
@@ -8,4 +8,11 @@ body {
   background: linear-gradient(180deg, #ff3d00 0%, #00a0b2  50%, #ff3d00 100%);
 }
 
+.dashCards {
+  opacity: 0.8;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #e91e63;
+}
+
 
